Add QueryRepository cache showcase
